<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/noteListFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_ballot_24"
        android:title="@string/all_note_title" />
    <item
        android:id="@+id/simpleNoteFragment"
        android:icon="@drawable/ic_register"
        android:title="@string/simple_note_title"/>
    <item
        android:id="@+id/importantNoteFragment"
       android:icon="@drawable/ic_heart"
        android:title="@string/important_note_title"/>

<!--    <item-->
<!--        android:id="@+id/detailFragment"-->
<!--        android:icon="@drawable/ic_baseline_add_24"-->
<!--        android:title="@string/add_note"/>-->
    <item
        android:id="@+id/passwordNotesFragment"
        android:icon="@drawable/ic_files_and_folders"
        android:title="@string/password_note_title"/>
<!--    <item-->
<!--        android:id="@+id/settingsFragment"-->
<!--        android:icon="@drawable/settings_dark_icone"-->
<!--        android:title="@string/tools" />-->
</menu>