<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"

    tools:context=".ui.fragments.DetailFragment">


    <EditText
        android:id="@+id/title_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_view_fragment_detail"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <ImageView
        android:id="@+id/image_view_fragment_detail"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descript_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="left|top"
        android:hint="@string/desc_hint"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_id">

    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/simple_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_note" />

        <RadioButton
            android:id="@+id/important_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important_note" />

        <RadioButton
            android:id="@+id/password_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_note" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/descript_id">

        <ImageButton
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_image_24" />

        <ImageButton
            android:id="@+id/add_voice_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_record_voice_over_24" />

        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_share_24" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_delete_24" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>

